--- a/resources/nginx.conf
+++ b/resources/nginx.conf
@@ -36,6 +36,11 @@ http {
     proxy_set_header X-Forwarded-For       $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto     $scheme;
     proxy_set_header X-Forwarded-Server    $remote_addr;
+    
+    ssl_session_cache                      shared:SSL:10m;
+    ssl_session_timeout                    10m;
+    
+    proxy_cache_path   /tmp/ levels=1:2 keys_zone=s3_cache:10m max_size=500m inactive=60m use_temp_path=off;
 
     include /etc/nginx/conf.d/*.conf;
 }
